# RWTH-Lab

./: README.md
Versuch00/Testprogramm_Eclipse_Doxygen/: Complex.cpp  Complex.h  main.cpp
Versuch00/Testprogramm_Qt/: main.cpp
Versuch00/build-Testprogramm_Qt-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release
Versuch01_Teil1/: Variablen  Variablen.cpp
Versuch01_Teil2/: Strukturen.cpp
Versuch02_Teil2/: fibonacci.cpp
Versuch02_Teil3/: Verschluesselung.cpp
Versuch03/: reversi.cpp  test.cpp
Versuch04/: Vektor.cpp  Vektor.h  main.cpp
Versuch05/: CMakeLists.txt  Liste.cpp  Liste.h  ListenElement.cpp  ListenElement.h  Student.cpp  Student.h  main.cpp
Versuch06/: CMakeLists.txt  Student.cpp  Student.h  main.cpp
Versuch07/: CMakeLists.txt  Student.cpp  Student.h  main.cpp
Versuch08/: Buecherei.cpp  Medium.h
Versuch08/Lab08/: Buecherei.cpp  CMakeLists.txt  DVD.h  Datum.cpp  Datum.h  Medium.cpp  Medium.h  Person.h  buch.h  magazin.h
Versuch08/build-Lab08-Desktop_arm_darwin_generic_mach_o_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  Lab08  build.ninja  (+2 more)
build-Versuch05-Desktop_Qt_5_15_2_clang_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  qtcsettings.cmake  untitled4
build-Versuch06-Qt_6_5_2_for_macOS-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  Versuch06  build.ninja  cmake_install.cmake
build-Versuch07-Qt_6_5_2_for_macOS-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Versuch07  build.ninja  cmake_install.cmake
(+879 files in other folders)
